linking http://regex101.com/#javascript

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="header">
       <h1><a href="/">Scriptular</a></h1>
       <h2>A javascript regular expression editor</h2>
+      <span style="font-size:14px; font-style: italic">This <a href="http://regex101.com/#javascript">alternative</a> works better in some cases and provides a Regex explanation as well as Regex syntax highlighting.</span>
     </div>
     <div id="main">
       <div id="expression">
